# prism

./: Cargo.toml  Dockerfile  README.md  ddl.sql  docker-compose.yaml
src/: channel.rs  config.rs  main.rs
src/data/: binance.rs  exchanges.rs  mod.rs  stream.rs  upbit.rs
src/data/depth/: mod.rs
src/data/depth/binance/: future.rs  spot.rs
src/data/depth/bitget/: future.rs
src/data/depth/upbit/: spot.rs
src/data/liquidation/: binance_liquidation_future.rs  mod.rs
src/data/liquidation/binance/: future.rs
src/data/market/: binance_aggtrade_future.rs  binance_aggtrade_spot.rs  mod.rs  upbit_aggtrade_spot.rs
src/data/market/binance/: future.rs  spot.rs
src/data/market/upbit/: spot.rs
src/data/markprice/: binance_markprice_future.rs  mod.rs
src/data/onchain/: mod.rs
src/data/orderbook/: binance_orderbook_future.rs  binance_orderbook_spot.rs  bitget_orderbook_future.rs  book.rs  mod.rs  upbit_orderbook_spot.rs
src/database/: postgres.rs
src/onchain(tbd)/: mod.rs
src/prism/: bar_dollar_imbalance.rs  bar_manager.rs  bar_tick_imbalance.rs  bar_volume_imbalance.rs  engine.rs  executor.rs  mod.rs  stream_process.rs
src/prism/bar/: dollar_imbalance.rs  mod.rs  tib.rs  tick_imbalance.rs  volume_imbalance.rs
src/prism/core/: future.rs  market_state.rs  mod.rs  spot.rs
src/prism/elements/: candle.rs  mod.rs  vwap.rs
src/prism/orderbook/: mod.rs
src/prism/stream/: future.rs  mod.rs  spot.rs
src/prism/trade/: binance.rs  input_channel.rs  inter_exchange_param.rs  intra_exchange_param.rs  manager.rs  mod.rs  param.rs  upbit.rs
(+6 files in other folders)
