[package]
name = "cryptoquant"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio-postgres = "0.7.13"
chrono = "0.4.39"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
clap = "4.5.31"
log = "0.4.26"
env_logger ="0.11.6"
uuid = { version = "1.14.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rust_decimal = "1.36.0"